refactor: update pom.xml for Java 8 compatibility and add configuration for maven-surefire-plugin; simplify ExampleTest class